Fix css for wrap email

--- a/international_online_offer/sass/pages/signup.scss
+++ b/international_online_offer/sass/pages/signup.scss
@@ -1,14 +1,3 @@
 .eyb-signup {
-    background-color: $great-light-blue;
-    .eyb-preview-image {
-        background-position: top right;
-        background-repeat: no-repeat;
-        background-size: contain;
-        width: 100%;
-        max-width: 600px;
-        height: 370px;
-        margin-right: auto;
-        margin-left: auto;
-        background-image: url('/static/svg/eyb-preview.svg')
-    }
+    word-break: break-word;
 }
